# DIE-engine

./: .gitmodules  APKBUILD  CMakeLists.txt  Dockerfile  LICENSE  PKGBUILD  README.md  THANKS.md  __mac.h  __unix.h  __windows.h  _macros.h  binary.cpp  binary.h  build.pri  build_alphinepkg.sh  build_alpinepkg.sh  build_archpkg.sh  build_console_lin.sh  build_console_mac.sh  build_console_win.bat  build_die_win.bat  build_diedll_win.bat  build_dielib_win.bat  build_dpkg.sh  build_lin64.sh  build_linux_portable.sh  build_mac.sh  build_msvc_win32.bat  build_msvc_win32_pdb.bat  build_msvc_win64.bat  build_msvc_win64_pdb.bat  build_msvc_win64_qt6.bat  build_msvc_winxp.bat  build_msvc_winxp_pdb.bat  build_win32.bat  build_win32.new.bat  build_win64.bat  build_win_generic.cmd  build_win_generic_check.cmd  (+79 more)
.github/workflows/: build_arch.yml  builder.yml  builder_tmp.yml  docker-image.yml  semgrep.yml  update-submodules.yml
DEBIAN/: control  die.desktop
DIE_source/: _options.h  scan.cpp  scan.h  scriptbinary.cpp  scriptbinary.h  scriptelf.cpp  scriptelf.h  scriptgeneric.cpp  scriptgeneric.h  scriptmach.cpp  scriptmach.h  scriptmsdos.cpp  scriptmsdos.h  scriptpe.cpp  scriptpe.h  scripttext.cpp  scripttext.h  singlefilescan.cpp  singlefilescan.h  utils.cpp  utils.h
DIE_source/console/: _mainclass.cpp  _mainclass.h  console.pro  mainc.cpp
DIE_source/diedll/: diedll.cpp  diedll.pro
DIE_source/dielib/: dielib.cpp  dielib.h  dielib.pro
LINUX/: control  control_Ubuntu_21.04  die.desktop  io.github.horsicq.detect-it-easy.desktop  io.github.horsicq.detect-it-easy.metainfo.xml
beaengine/: beaengine.pri
beaengine/headers/: BeaEngine.h
build_libs/: build_libs.pro
console_source/: CMakeLists.txt  console_source.pro  consoleoutput.cpp  consoleoutput.h  main_console.cpp
die_source/: _options.h  scan.cpp  scan.h  scriptbinary.cpp  scriptbinary.h  scriptdie.cpp  scriptdie.h  scriptelf.cpp  scriptelf.h  scriptgeneric.cpp  scriptgeneric.h  scriptmach.cpp  scriptmach.h  scriptmsdos.cpp  scriptmsdos.h  scriptpe.cpp  scriptpe.h  scripttext.cpp  scripttext.h  singlefilescan.cpp  singlefilescan.h  utils.cpp  utils.h
die_source/console/: _mainclass.h  console.pro  mainc.cpp
die_source/console_source/: _mainclass.cpp  _mainclass.h  console_source.pro  mainc.cpp
die_source/diedll/: diedll.cpp  diedll.pro
die_source/dielib/: dielib.cpp  dielib.h
die_source/gui_source/: dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogdirectoryheuristicscan.cpp  dialogdirectoryheuristicscan.h  dialogdirectoryheuristicscan.ui  dialogelfclass.cpp  dialogelfclass.h  dialogelfclass.ui  dialogelfdata.cpp  dialogelfdata.h  dialogelfdata.ui  dialogelfgeneric.cpp  dialogelfgeneric.h  dialogelfheader.cpp  dialogelfheader.h  dialogelfheader.ui  dialogelfmachine.cpp  dialogelfmachine.h  dialogelfmachine.ui  dialogelfpht.cpp  dialogelfpht.h  dialogelfpht.ui  dialogelfprogramheader.cpp  dialogelfprogramheader.h  dialogelfprogramheader.ui  dialogelfsectionheader.cpp  dialogelfsectionheader.h  dialogelfsectionheader.ui  dialogelfsht.cpp  dialogelfsht.h  dialogelfsht.ui  dialogelfstrings.cpp  dialogelfstrings.h  dialogelfstrings.ui  dialogelftype.cpp  dialogelftype.h  dialogelftype.ui  dialogentropy.cpp  dialogentropy.h  (+201 more)
die_source/lang/: die_de.qm  die_ja.qm  die_pl.qm  die_pt_BR.qm  die_ru.qm  die_vi.qm  die_zh_CN.qm  die_zh_TW.qm
die_source/lite_source/: lite.cpp  lite_source.pro  litewindow.cpp  litewindow.h  litewindow.ui
die_source/plugins_source/: plugininterface.h  plugins_source.pro
die_source/winloader_source/: rsrc_die.rc  rsrc_diel.rc  winloader_die.cpp  winloader_diel.cpp
gui_source/: CMakeLists.txt  DesktopIntegrationHelper.cpp  DesktopIntegrationHelper.h  desktopintegrationhelper.cpp  desktopintegrationhelper.h  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogoptions.cpp  dialogoptions.h  dialogoptions.ui  dialogselectstyle.cpp  dialogselectstyle.h  dialogselectstyle.ui  gui_source.pro  gui_source_tr.pro  guimainwindow.cpp  guimainwindow.h  guimainwindow.ui  main_gui.cpp  res.qrc  rsrc.qrc
gui_source/translation/: die_ar.ts  die_bn.ts  die_de.ts  die_en.ts  die_es.ts  die_fa.ts  die_fr.ts  die_he.ts  die_id.ts  die_it.ts  die_ja.ts  die_ko.ts  die_pl.ts  die_pt_BR.ts  die_pt_PT.ts  die_ru.ts  die_sv.ts  die_tr.ts  die_uk.ts  die_vi.ts  die_zh.ts  die_zh_TW.ts
icons/: lite.icns  main.icns
images/thanks/: 4kusNick.json  ADMINCRACK.json  ASL.json  AdamHenault.json  Adler.json  AdricNet.json  Airenikus.json  AliHadi.json  AndersonLeite.json  ArnaudDovi.json  Avroke.json  BAHEK.json  BJNFNE.json  Bartosz.json  BoRoV.json  DICIBF.json  Dan0xE.json  DavClark.json  DavidZimmer.json  Dazz.json  DenCoder.json  Diabolic.json  DimitarSerg.json  DosX.json  DrFarFar.json  DrZlo.json  DuncanOgilvie.json  ELF_7719116.json  EliseuFilipi.json  Elite_r.json  FernandoMerces.json  FilipNavara.json  FrenchYeti.json  GPcH.json  GiladReich.json  Gray.json  HandMill.json  Hexacorn.json  (+61 more)
lite_source/: CMakeLists.txt  lite_source.pro  litemainwindow.cpp  litemainwindow.h  litemainwindow.ui  main_lite.cpp  windows.manifest.xml
qtsingleapplication/: common.pri  qtsingleapplication.pri
qwt/: qwt.pri
res/: license.txt  readme.txt
src/: CMakeLists.txt  global.h
src/console/: CMakeLists.txt
src/gui/: CMakeLists.txt  desktopintegrationhelper.cpp  desktopintegrationhelper.h  dialogabout.cpp  dialogabout.h  dialogoptions.cpp  dialogoptions.ui  dialogselectstyle.cpp  dialogselectstyle.h  die_plugin_import.cpp  guimainwindow.ui  main_gui.cpp
src/gui/translation/: die_bn.ts  die_es.ts  die_he.ts  die_pl.ts  die_pt_PT.ts  die_ru.ts  die_sq.ts  die_tr.ts  die_uk.ts  die_zh.ts
src/lite/: CMakeLists.txt  litemainwindow.h  litemainwindow.ui
translations/: die_ar_AR.ts  die_bn_BN.ts  die_de_DE.ts  die_es_ES.ts  die_fa_FA.ts  die_fr_FR.ts  die_he_IL.ts  die_id_ID.ts  die_it_IT.ts  die_ja_JP.ts  die_ko_KR.ts  die_pl_PL.ts  die_pt_BR.ts  die_pt_PT.ts  die_ru_RU.ts  die_sq_AL.ts  die_sv_SE.ts  die_tr_TR.ts  die_uk_UA.ts  die_vi_VN.ts  die_zh_CN.ts  die_zh_TW.ts
winloader_source/: rsrc.rc  winloader.cpp
(+213 files in other folders)
